<resources>
    <string name="app_name">Mata Fome</string>

    <string name="title_activity_principal">Mata Fome</string>
    <string name="dummy_button">ENTRAR</string>
    <string name="dummy_content">MATE\nA SUA\nFOME</string>
    <string name="small_description">Encontre o podrão mais próximo de você!</string>

    <string name="title_activity_login">Entrar no Mata Fome</string>

    <string name="action_settings">Configurações</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_senha">Senha</string>
    <string name="login_button">ENTRAR</string>
    <string name="signup_button">CRIAR USUARIO</string>
    <string name="exemplo_senha">***********</string>
    <string name="exemplo_email">panda@email.com</string>
    <string name="title_activity_criar_usuario">Novo usuário</string>

    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="nome">Nome</string>
    <string name="exemplo_nome">Fulano Silva</string>

    <string name="logout">Sair</string>

    <string name="title_activity_buscar_barraca">Mate a sua fome!</string>

    <string name="hello_world">Hello world!</string>
    <string name="avaliar">Avaliar</string>
    <string name="avaliacoes">Avaliações</string>
    <string name="exemplo_nome_bar">Pipoca do Frene</string>
    <string name="exemplo_desc">Melhor pipoca do Rio</string>
    <string name="raio_default">100 m</string>

    <!-- Rest Urls -->
    <string name="server_url">https://matafomeserver.herokuapp.com/</string>
    <string name="url_criar_usuario">usuario/criar</string>
    <string name="url_obter_usuario_por_email">usuario/obter-por-email?email=%s</string>
    <string name="url_obter_barracas_proximas">lanches/todos-no-raio?raio=%1$.2f&amp;lat=%2$.10f&amp;lng=%3$.10f</string>
    <string name="pesquisando_lanches">Pesquisando lanches rápidos dentro de %d metros.</string>
    <string name="item_ponto_venda">Ponto Venda</string>
    <string name="url_obter_negocio_usuario">negocio?idDono=%d</string>
    <string name="title_activity_lista_pontos_venda">Meus Pontos de Venda</string>
    <string name="listar_barracas">Meus Pontos de Venda</string>
    <string name="cadastrar_ponto_venda">cadastrar</string>
    <string name="nome_ponto_venda">Nome</string>
    <string name="descricao_ponto_venda">Descrição</string>
    <string name="localizacao_ponto_venda">Localização</string>
    <string name="salvar_ponto_venda">salvar</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="entre">ENTRE</string>
    <string name="ou">OU</string>
    <string name="url_editar_usuario">usuario/editar</string>
    <string name="url_cadastrar_negocio">negocio/cadastrar</string>
    <string name="url_obter_avaliacoes_negocio">avaliacao/obter-todas?idVendedor=%d</string>
    <string name="url_editar_negocio">negocio/editar</string>
    <string name="url_obter_negocio_localizacao">negocio/detalhes?idNegocio=%1$d&amp;idUsuario=%2$d</string>
    <string name="url_enviar_avaliacao">avaliacao/cadastrar</string>

</resources>
