<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context="br.com.unigranrio.matafome.aplicacao.InicioActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="30dp">

        <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="#33b5e5"
            android:textStyle="bold" android:textSize="70sp"
            android:text="@string/dummy_content"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/small_description"
            android:id="@+id/small_description"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_gravity="bottom">

        <Button android:id="@+id/dummy_button"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/dummy_button"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp" />
    </FrameLayout>

</FrameLayout>
