<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.unigranrio.matafome.aplicacao.BuscarBarracaActivity"
    android:padding="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/raioBuscaSeekBar"
                android:paddingBottom="5dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/raio_default"
                android:id="@+id/lblRaioBusca"
                android:textAlignment="gravity"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="5dp" />
        </LinearLayout>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/acoesContainer"
            android:visibility="visible"
            android:layout_gravity="bottom">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avaliar"
                android:id="@+id/btnAvaliar"
                android:layout_weight="0.5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avaliacoes"
                android:id="@+id/btnVerAvaliacoes"
                android:layout_weight="0.5" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
